--- a/my-app/src/index.html
+++ b/my-app/src/index.html
@@ -8,7 +8,7 @@
         <meta name="og:description" content=""/>
         <meta name="og:image" content=""/>
     </head>
-    <body>
+    <body id="root">
 
     </body>
 </html>
