--- a/my-app/src/index.html
+++ b/my-app/src/index.html
@@ -7,6 +7,7 @@
         <meta name="og:title" content=""/>
         <meta name="og:description" content=""/>
         <meta name="og:image" content=""/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body id="root">
 
